--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors # add code here"
+    "kindof_neighbors.append # add code here"
    ]
   },
   {
