--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "kindof_neighbors # add code here"
    ]
   },
   {
