Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,22 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Malta'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kindof_neighbors.pop() # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
