--- a/index.ipynb
+++ b/index.ipynb
@@ -431,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(countries)"
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
