--- a/index.ipynb
+++ b/index.ipynb
@@ -427,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = (coun)"
+    "unique_countries = set(countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -459,13 +459,13 @@
        " 'Malta']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_countries # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
+    "countries # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
     "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
    ]
   },
