Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -447,13 +447,13 @@
        "list"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(countries) # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
+    "type(unique_countries) # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
     "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
    ]
   },
