--- a/index.ipynb
+++ b/index.ipynb
@@ -466,11 +466,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_of_repeats = \n",
+    "num_of_repeats = 3\n",
     "num_of_repeats # 3"
    ]
   },
